--- a/k8s/7-yo_ingress.yaml
+++ b/k8s/7-yo_ingress.yaml
@@ -2,14 +2,14 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: yo-ingress
-    annotations:
+  annotations:
     kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
     - me.facundosegarra.dev
-    secretName: echo-tls
+    secretName: yo-tls
   rules:
   - host: me.facundosegarra.dev
     http:
